--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@ai-sdk/openai": "3.0.0-beta.55",
     "@ai-sdk/react": "3.0.0-beta.94",
+    "@openrouter/ai-sdk-provider": "1.0.0-beta.7",
     "@prisma/client": "^6.16.3",
     "@t3-oss/env-core": "^0.13.8",
     "@tailwindcss/vite": "^4.0.6",
